// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Test clear theme 1`] = `
<button
  className="button clear size-m"
  type="button"
>
  TEST
</button>
`;

exports[`Button Test render 1`] = `
<button
  className="button outline size-m"
  type="button"
>
  TEST
</button>
`;
